Bug 162359 - FILESAVE PDF/UA Comment exported as PDF annotation generates "Annotation is not nested inside an "Annot" structure element" error
Summary: FILESAVE PDF/UA Comment exported as PDF annotation generates "Annotation is n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2024-08-05 15:02 UTC by Gabor Kelemen (Collabora)
Modified: 2025-10-03 16:40 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (15.76 KB, application/vnd.oasis.opendocument.text)
2024-08-05 15:02 UTC, Gabor Kelemen (Collabora)
Details
The example file exported by Writer as PDF/UA (17.65 KB, application/pdf)
2024-08-05 15:02 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue in PAC 2021 (44.79 KB, image/png)
2024-08-05 15:03 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-08-05 15:02:16 UTC
Created attachment 195723 [details]
Example file from Writer

Attached example contains a comment and exporting that as a PDF annotation creates an error message in PAC tool.

1. Open attached document
2. File - Export as - Export as PDF
3. Check the PDF/UA and the "Comments as PDF annotations" boxes
4. Open the exported file in PAC tool 2021 (2024 fails to open it entirely)
-> There would be an error reported 
"Annotation is not nested inside an "Annot" structure element"

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f7197e574cdbd7410fcadab1632bcce2626dca5a
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

and ever since 5.0, with turning on only "export as tagged PDF" as well.
Comment 1 Gabor Kelemen (Collabora) 2024-08-05 15:02:42 UTC
Created attachment 195724 [details]
The example file exported by Writer as PDF/UA
Comment 2 Gabor Kelemen (Collabora) 2024-08-05 15:03:06 UTC
Created attachment 195725 [details]
Screenshot of the issue in PAC 2021
Comment 3 Commit Notification 2024-09-05 20:59:21 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1e905680c85c4b79cc72df5dcece38a65898a90d

tdf#162359 sw: fix the export of comments as PDF annotations

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-20 10:33:29 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/43549566f3785065375cdf345993bd91c14e749d

tdf#162359 sw: fix the export of comments as PDF annotations

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.