tdf#162359 sw: fix the export of comments as PDF annotations

Change-Id: If4a8a1a73c382f496b2c6dd4d52271dc6bc87dda
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172877
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>