include/vcl/pdfextoutdevdata.hxx
@@ -342,11 +342,14 @@ public:
     @param rNote
     specifies the contents of the note
 
+    @param rPopupRect
+    specifies the rectangle of the popup window for the note
+
     @param nPageNr
     number of page the note is on (as returned by NewPage)
     or -1 in which case the current page is used
     */
-    void CreateNote( const tools::Rectangle& rRect, const vcl::pdf::PDFNote& rNote, sal_Int32 nPageNr = -1 );
+    sal_Int32 CreateNote(const tools::Rectangle& rRect, const vcl::pdf::PDFNote& rNote, const tools::Rectangle& rPopupRect = tools::Rectangle(), sal_Int32 nPageNr = -1);
 
     /** begin a new logical structure element
 
